--- a/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/CRASH_REPORT.yml
@@ -1,5 +1,5 @@
 name: Crash Report
-description: Create a report with a generated crash log attached (if possible) to help mLauncher improve
+description: Create a report with a generated crash log attached (if possible) to help EasyLauncher improve
 labels: [ 'Type: Crash Report' ]
 title: '[Crash Report] add text here'
 assignees: [ 'HeCodes2Much' ]
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for helping me to make mLauncher better by reporting a crash. :hugs:
+        Thank you for helping me to make EasyLauncher better by reporting a crash. :hugs:
         Please fill in as much information as possible about your crash so that I can fix it immediately.
 
   - type: checkboxes
@@ -17,11 +17,11 @@ body:
       options:
         - label: "I will make sure to have the issue written in English with an English title."
           required: true
-        - label: "I've verified that this issue hasn't been addressed in the [changelogs](https://github.com/DroidWorksStudio/mLauncher/blob/main/CHANGELOG.md)."
+        - label: "I've verified that this issue hasn't been addressed in the [changelogs](https://github.com/DroidWorksStudio/EasyLauncher/blob/main/CHANGELOG.md)."
           required: true
         - label: "I have created the title to best match the issue."
           required: true
-        - label: "I optionally [donated](https://www.buymeacoffee.com/HeCodes2Much) to support the mLauncher mission."
+        - label: "I optionally [donated](https://www.buymeacoffee.com/HeCodes2Much) to support the EasyLauncher mission."
           required: false
 
   - type: input
