--- a/.github/ISSUE_TEMPLATE/QUESTION.yml
+++ b/.github/ISSUE_TEMPLATE/QUESTION.yml
@@ -16,15 +16,15 @@ body:
       options:
         - label: "I will make sure to have the issue written in English with an English title."
           required: true
-        - label: "I made sure that there are **no existing issues** - [open](https://github.com/DroidWorksStudio/mLauncher/issues) or [closed](https://github.com/DroidWorksStudio/mLauncher/issues?q=is%3Aissue+is%3Aclosed) - which I could contribute my information to."
+        - label: "I made sure that there are **no existing issues** - [open](https://github.com/DroidWorksStudio/EasyLauncher/issues) or [closed](https://github.com/DroidWorksStudio/EasyLauncher/issues?q=is%3Aissue+is%3Aclosed) - which I could contribute my information to."
           required: true
-        - label: "I have already checked the [WIKI](https://github.com/DroidWorksStudio/mLauncher/wiki) pages."
+        - label: "I have already checked the [WIKI](https://github.com/DroidWorksStudio/EasyLauncher/wiki) pages."
           required: true
-        - label: "I've verified that this issue hasn't been addressed in the [changelogs](https://github.com/DroidWorksStudio/mLauncher/blob/main/CHANGELOG.md)."
+        - label: "I've verified that this issue hasn't been addressed in the [changelogs](https://github.com/DroidWorksStudio/EasyLauncher/blob/main/CHANGELOG.md)."
           required: true
         - label: "I have taken the time to fill in all the required details. I understand that the question will be dismissed otherwise."
           required: true
-        - label: "I optionally [donated](https://www.buymeacoffee.com/HeCodes2Much) to support the mLauncher mission."
+        - label: "I optionally [donated](https://www.buymeacoffee.com/HeCodes2Much) to support the EasyLauncher mission."
           required: false
 
   - type: textarea
